2009-05-20  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpLanguageBinding.cs: Add support for .net 4.0.

	* CSharpBindingCompilerManager.cs: Properly locate the
	  compiler when running on MS.NET.

2009-05-14  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* Syntax/CSharpSyntaxMode.cs:
	* Syntax/HighlightPropertiesSemanticRule.cs: Added semantic
	  rules to the c# syntax mode.

2009-05-14  Mike Krüger  <mkrueger@novell.com>

	* Syntax/CSharpSyntaxMode.cs: Worked on preprocessor semantic
	  highlighting.

2009-05-14  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs: Applied
	  patch Eberhard Beilharz <eb1@sil.org> from (Bug 503410 -
	  Can't set warning level to 4).

2009-05-13  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs:
	* Syntax/CSharpSyntaxMode.cs: Worked on semantic
	  highlighting/fixed bug that could cause a crash with invalid
	  pre processor if blocks.

2009-05-12  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* Syntax/CSharpSyntaxMode.cs: Worked on pre processor semantic
	  highlighting.

2009-05-12  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs:
	* Syntax/CSharpSyntaxMode.cs:
	* Gui/CSharpTextEditorCompletion.cs: Fixed 'Bug 501999 -
	  Intellisense completion of new array: put cursor inside
	  brackets'

2009-05-08  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs: Fixed query expression resolving
	  bug.

2009-05-08  Mike Krüger  <mkrueger@novell.com>

	* Syntax:
	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* Syntax/CSharpSyntaxMode.cs: Added c# syntax mode.

2009-05-04  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed a bug that code completion
	  shows up for not declared members ("string s; s.c."
	  shouldn't complete anymore)

2009-05-04  Lluis Sanchez Gual  <lluis@novell.com>
